# Membrane-Mechanics

./: .gitignore  LICENSE  PUBLISH_SUMMARY.md  README.md  index.html
css/: style.css
fluctuation-analysis/: CMakeLists.txt  app.py  main_0.0.cpp  main_0.1.cpp  main_1.0(stable).cpp  main_1.1(stable).cpp  main_1.2(stable).cpp  main_1.3(stable).cpp  main_1.4(stable).cpp  paper_extract_focus.txt  plotting.py  plotting_analytical.py  review_analytical.py  time_autocorr_2.0(stable).cu  time_corr_1.0.cu  time_corr_1.1(stable).cu  time_corr_1.2(stable).cu  time_crosscorr_0.0(stable).cu
fluctuation-analysis/quasi_spherical/: README.md  __init__.py  autocorr_wrapper.py  fitting.py  generator.py  legendre.py  main.py  validation.py  visualization.py
js/: computational-workflow.js  physics.js
pages/: autocorrelation.html  computational-workflow.html  kappa.html  legendre.html  theory.html
